--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "main": "src/init.lua",
   "types": "src/index.d.ts",
+  "files": ["src/", "LICENSE", "CHANGELOG.md", "README.md"],
   "scripts": {
   },
   "repository": {
