--- a/.eslintrc
+++ b/.eslintrc
@@ -7,12 +7,7 @@
 		"sourceType": "module",
 		"project": "./tsconfig.json"
 	},
-	"plugins": [
-		"roblox-ts",
-		"@typescript-eslint",
-		"@typescript-eslint/eslint-plugin",
-		"prettier"
-	],
+	"plugins": ["roblox-ts", "@typescript-eslint", "@typescript-eslint/eslint-plugin", "prettier"],
 	"extends": [
 		"plugin:@typescript-eslint/recommended",
 		"prettier/@typescript-eslint",
@@ -42,7 +37,6 @@
 		"@typescript-eslint/explicit-function-return-type": "off",
 		"@typescript-eslint/explicit-member-accessibility": "error",
 		"@typescript-eslint/interface-name-prefix": "off",
-		"@typescript-eslint/member-ordering": "error",
 		"@typescript-eslint/no-empty-function": "off",
 		"@typescript-eslint/no-namespace": "off",
 		"@typescript-eslint/no-non-null-assertion": "error",
@@ -53,6 +47,7 @@
 				"assertionStyle": "never"
 			}
 		],
+		"@typescript-eslint/triple-slash-reference": "off",
 		"prefer-const": "warn",
 		"no-undef-init": "error"
 	}
