--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
 	"name": "@rbxts/testez",
-	"version": "0.3.1-ts.0",
+	"version": "0.3.1-ts.1",
 	"main": "src/init.lua",
 	"types": "src/index.d.ts",
 	"files": [
-		"src"
+		"src",
+		"globals.d.ts"
 	],
 	"scripts": {},
 	"repository": {
